# wheeltec_ros2

./: WHEELTEC.yaml
.agent/skills/ai-engineering/: SKILL.md
.agent/skills/ai-engineering/references/: frameworks.md  mlops.md
.agent/skills/ros2-humble/: SKILL.md
.agent/skills/ros2-humble/references/: launch-params.md  tf2-sim.md
.claude/scripts/: auto_preview.py  checklist.py  session_manager.py  verify_all.py
.claude/skills/ai-engineering/references/: architectures.md  rl-drl.md
.claude/skills/ros2-humble/references/: node-development.md  packages.md
data/map/: WHEELTEC.pgm  WHEELTEC.yaml
data/path/: nav_paths.csv
design-system/wheeltec-scada/: MASTER.md
docs/: AI-IMPLEMENTATION-COMPLETE.md  PLAN-ai-detection-tracking.md  PLAN-offboard-ai-system.md  PLAN-rpp-mecanum-refactor.md  PLAN-scada-dashboard-refactor.md  PLAN-scada-robot-web.md  PLAN-scheduled-coverage-patrol.md  PLAN-scheduled-patrol.md  plan.md  production_deployment.md  reverse_ssh.md
jetson/: gui.md
src/ai_robot/: package.xml  setup.cfg  setup.py
src/ai_robot/ai_robot/: context_node.py  data_logger_node.py  detection_node.py  detection_overlay_node.py  pi4_serial_bridge.py  tracking_node.py
src/ai_robot/launch/: ai_system.launch.py
src/ai_robot_msgs/: CMakeLists.txt  package.xml
src/ai_robot_msgs/msg/: Detection.msg  TrackedHuman.msg  TrackedHumanArray.msg
src/auto_recharge_ros2/: Charger_Position.json
src/navigation2-humble/nav2_bringup/launch/: navigation_launch.py
src/simple_follower_ros2/simple_follower_ros2/: ar_follow.py
src/turn_on_wheeltec_robot/: wheeltec_udev.sh
src/turn_on_wheeltec_robot/launch/: prod_bringup.launch.py  wheeltec_camera.launch.py  wheeltec_lidar.launch.py
src/turn_on_wheeltec_robot/src/: wheeltec_robot.cpp
src/wheeltec_camera/: package.xml  setup.cfg  setup.py
src/wheeltec_camera/launch/: camera.launch.py
src/wheeltec_dynamic_avoidance/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wheeltec_dynamic_avoidance/launch/: dynamic_avoidance.launch.py
src/wheeltec_dynamic_avoidance/wheeltec_dynamic_avoidance/: __init__.py  obstacle_avoider_node.py
src/wheeltec_lidar_ros2/LSlidar/lslidar_driver/launch/: lsn10p_launch.py  lsn10p_uart_launch.py
src/wheeltec_lidar_ros2/LSlidar/lslidar_driver/src/: lsiosr.cpp  lslidar_driver.cc
src/wheeltec_pid_controller/: CMakeLists.txt  package.xml
src/wheeltec_pid_controller/config/: pid_params.yaml
src/wheeltec_pid_controller/include/wheeltec_pid_controller/: pid_controller.hpp
src/wheeltec_pid_controller/launch/: pid_controller.launch.py
src/wheeltec_pid_controller/src/: pid_controller_node.cpp
src/wheeltec_robot_detection/: CMakeLists.txt  OPTIMIZATION.md  package.xml  setup.cfg  setup.py
src/wheeltec_robot_detection/config/: detection_params.yaml  storage_params.yaml  streaming_params.yaml  tracker_params.yaml
src/wheeltec_robot_detection/include/wheeltec_robot_detection/: detection_node.hpp
src/wheeltec_robot_detection/launch/: detection_cpp.launch.py  full_ai_pipeline.launch.py  optimized_pipeline.launch.py
src/wheeltec_robot_detection/models/: build_tensorrt.sh  export_onnx.py  pipeline_profiler.py  speed_probe.py  test_trt.py
src/wheeltec_robot_detection/src/: detection_node.cpp  detection_node_main.cpp
src/wheeltec_robot_detection/wheeltec_robot_detection/: __init__.py  detection_node.py  dynamic_obstacle_publisher.py  image_storage_node.py  tracker_node.py  video_stream_node.py  websocket_stream_node.py
src/wheeltec_robot_detection/wheeltec_robot_detection/inference/: __init__.py  tensorrt_detector.py
src/wheeltec_robot_detection/wheeltec_robot_detection/tracking/: __init__.py
src/wheeltec_robot_msg/: CMakeLists.txt  package.xml
src/wheeltec_robot_msg/msg/: Detection2D.msg  Detection2DArray.msg  DynamicObstacle.msg  DynamicObstacleArray.msg  TrackedHuman.msg  TrackedHumanArray.msg  TrackedObject.msg
src/wheeltec_robot_nav2/launch/: save_map.launch.py  wheeltec_nav2.launch.py
src/wheeltec_robot_nav2/map/: WHEELTEC.pgm
src/wheeltec_robot_nav2/param/wheeltec_params/: param_mini_diff.yaml  param_mini_mec.yaml
src/wheeltec_robot_rtab/launch/: wheeltec_slam_rtab_camera_only.launch.py
src/wheeltec_robot_slam/wheeltec_slam_toolbox/config/: mapper_params_online_async.yaml
src/wheeltec_robot_slam/wheeltec_slam_toolbox/launch/: online_async_launch.py
src/wheeltec_rviz2/rviz/: wheeltec.rviz
src/wheeltec_scada_bridge/: package.xml  setup.cfg  setup.py
src/wheeltec_scada_bridge/launch/: scada_bridge.launch.py
src/wheeltec_scada_bridge/wheeltec_scada_bridge/: __init__.py  coverage_planner.py  main.py  node.py
website/client/: build_output.txt  package-lock.json  package.json
website/client/src/app/: layout.tsx
website/client/src/app/(default)/: layout.tsx  page.tsx
website/client/src/components/ai/: ai-stream-feed.tsx
website/client/src/components/camera/: camera-feed.tsx
website/client/src/components/control/: coverage-generator.tsx  emergency-stop.tsx  home-point.tsx  joystick-pad.tsx  patrol-panel.tsx  speed-control.tsx
website/client/src/components/layout/: header.tsx  sidebar.tsx
website/client/src/components/map/: map-viewer.tsx  robot-map.tsx
website/client/src/components/providers/: robot-provider.tsx
website/client/src/hooks/: use-dashboard-data.ts  use-keyboard-control.ts  use-robot-state.tsx  use-ros-connection.ts
website/client/src/lib/: constants.ts  ros-client.ts
website/client/src/styles/: globals.css
website/server/: .env  .gitignore  requirements.txt  robot.db
website/server/app/: config.py  main.py  zmq_client.py
website/server/app/db/: models.py  queries.py
website/server/app/routes/: ai.py  analytics.py  coverage.py  logs.py  maps.py  robot.py
website/server/app/services/: coverage_service.py  home_service.py  log_service.py  path_service.py  patrol_service.py  session_service.py  telemetry_service.py
website/server/app/ws/: handler.py
website/server/ros2_control/: main.py  node.py
website/server/tests/: test_coverage_planner.py  test_patrol_service.py
(+14 files in other folders)
