<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeltec_pid_controller</name>
  <version>2.0.0</version>
  <description>Velocity smoother for Wheeltec Mecanum robot. Smooths Nav2 MPPI cmd_vel output using low-pass filter and rate limiting. No PID, no odometry feedback — does not interfere with MPPI control loop.</description>
  <maintainer email="thientn204@gmail.com">thientn204</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
